fix the ui flickering bug

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ main {
 
 .wrapper {
   height: auto;
-  width: 700px;
+  width: 600px;
   display: flex;
   flex-direction: column;
   justify-content: center;
